# GraphFactorFactory

./: .gitignore  DASHBOARD.md  README.md  WRITE_TEST.md  dashboard.md  pyproject.toml
.github/: chatgpt-push-access-test.txt
artifacts/: 2026-01_alpha_report.md  real_validation_2025-07-22.json
configs/: default.yaml  monthly_carryover_ab_2025.json  monthly_carryover_ab_2026.json  monthly_carryover_ab_2026_01.json  phase0_ab_selected_v1.yaml  qlib_handler.example.yaml
data/: splits.csv
docs/: FULL_ALPHA_PIPELINE_ARCHITECTURE_AUDIT.md  HANDOFF_INTRADAY_7ARM_39DAY.md  INTRADAY_7ARM_39DAY_REPORT.md  LOCAL_AGENT_HANDOFF.md  LOCAL_AGENT_PHASE2_2025_HANDOFF.md  LOCAL_AGENT_RETURNCORR_REBUILD.md  LOCAL_AGENT_RETURNCORR_REBUILD_HANDOFF.md  NEXT_AGENT_HANDOFF.md  P1_PERFORMANCE_ANALYSIS.md  P2_24CORE_128GB_PARALLEL_ARCHITECTURE.md  PHASE01_2026H1_LOCAL_OPTIMIZATION_HANDOFF.md  PHASE0_35_SCALE_TWO_DAY_SMOKE.md  PHASE0_MARKET_DIAGNOSTICS_AND_PARAMETER_SELECTION.md  cross_day_identity_ab.md  dual_layer_two_day15_results.md  monthly_validation_local_agent_guide_zh.md  p1_b50_b35_theme_forest.md  p1_layer_local_theme_tree.md  p1_sharded_streaming_pipeline.md  p2_24core_oom_safe_scheduler.md  p2_alpha_lab_daily_stage.md  p2_full_alpha_lab_2day_execution.md  p2_partition_safe_alpha_lab.md  p2_pit_contract.md  p2_real_speed_benchmark.md  p3_daily_alpha_lab.md  phase1_temporal_round2.md  phase1_temporal_round3_design.md  phase1_temporal_round3_realdata_findings.md  phase1_temporal_round4_60m_ab.md  phase1_temporal_round5_cross_hour_cross_day.md  pipeline.md  real_validation.md  storage_design.md
examples/: qlib_smoke.py
reports/: pit_audit_sample_v2.json  v4_january_alpha_summary.csv
scripts/: analyze_p1_every_snapshot_persistence.py  analyze_p1_full_day_persistence.py  audit_p2_pit.py  auto_dashboard.py  benchmark_p2_alpha_lab.py  benchmark_themes.py  build_b50_b35_theme_forest.py  build_b50_b35_theme_forest_streaming.py  build_b50_b35_theme_forest_streaming_v2.py  build_daily_labels.py  build_effective_state_index.py  build_layer_local_theme_trees.py  check_p_drive.py  compare_architectures.py  compare_penalty_start_depths.py  compare_penalty_start_depths_every_snapshot.py  daily_label_integration.py  generate_monthly_alpha_report.py  generate_monthly_alpha_report_with_risk.py  generate_monthly_alpha_report_with_risk_focused.py  p1_qc.py  (+80 more)
(+137 files in other folders)
