[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphfactorfactory"
version = "0.2.0"
description = "NodeFactorFactory-native causal multilayer graph factor factory with Qlib adapters"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0",
  "pandas>=2.2",
  "pyarrow>=18",
  "scipy>=1.13",
  "scikit-learn>=1.5",
]

[project.optional-dependencies]
qlib = ["pyqlib>=0.9.7"]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
