[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphfactorfactory"
version = "0.3.0"
description = "Point-in-time multilayer graph factor factory with lossless canonical storage and Qlib views"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.2",
  "numpy>=2.0",
  "pandas>=2.2",
  "pyarrow>=18",
  "PyYAML>=6",
  "scipy>=1.13",
]

[project.optional-dependencies]
qlib = ["pyqlib>=0.9.7"]
dev = ["pytest>=8"]

[project.scripts]
graphfactorfactory = "graphfactorfactory.interfaces.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
