[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphfactorfactory"
version = "0.4.0"
description = "Point-in-time multilayer graph and theme factor factory with lossless storage and Qlib views"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.2",
  "numpy>=2.0",
  "pandas>=2.2",
  "pyarrow>=18",
  "PyYAML>=6",
  "scipy>=1.13",
]

[project.optional-dependencies]
qlib = ["pyqlib>=0.9.7"]
evaluation = ["python-igraph>=0.11", "leidenalg>=0.10", "scikit-learn>=1.5"]
themes = ["python-igraph>=0.11", "leidenalg>=0.10"]
dev = ["pytest>=8"]

[project.scripts]
graphfactorfactory = "graphfactorfactory.interfaces.cli:main"
graphfactorfactory-theme = "graphfactorfactory.interfaces.theme_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
